<resources>
    <string name="app_name">Faisal Movers</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="bus_type">Bus Type</string>
    <string name="price">Price</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="no_city_found">No City Found</string>
    <string name="select_city">Select City</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="open_calender">Open Calender</string>
    <string name="bus_tickets">Bus Tickets</string>
    <string name="date">DATE</string>
    <string name="going_from">Going From..</string>
    <string name="going_to">Going To..</string>
    <string name="invoice">Invoice</string>
    <string name="executive_plus">Executive Plus</string>
    <string name="seat_no_s">Seat No(s)</string>
    <string name="depature_time">Depature Time</string>
    <string name="id">ID</string>
    <string name="pnr">PNR</string>
    <string name="booking_time">Booking Time</string>
    <string name="passenger_details">Passenger Details</string>
    <string name="name">Name</string>
    <string name="nic">NIC</string>
    <string name="total_price">Total Price</string>
    <string name="paid">Paid</string>
    <string name="lower_case_from">From</string>
    <string name="lower_case_to">To</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="success">success</string>
    <string name="no_seats_found">No Seats Found</string>

    <string name="seat_1">1</string>
    <string name="seat_2">2</string>
    <string name="seat_3">3</string>
    <string name="seat_4">4</string>
    <string name="seat_5">5</string>
    <string name="seat_6">6</string>
    <string name="seat_7">7</string>
    <string name="seat_8">8</string>
    <string name="seat_9">9</string>
    <string name="seat_10">10</string>
    <string name="seat_11">11</string>
    <string name="seat_12">12</string>
    <string name="seat_13">13</string>
    <string name="seat_14">14</string>
    <string name="seat_15">15</string>
    <string name="seat_16">16</string>
    <string name="seat_17">17</string>
    <string name="seat_18">18</string>
    <string name="seat_19">19</string>
    <string name="seat_20">20</string>
    <string name="seat_21">21</string>
    <string name="seat_22">22</string>
    <string name="seat_23">23</string>
    <string name="seat_24">24</string>
    <string name="seat_25">25</string>
    <string name="seat_26">26</string>
    <string name="seat_27">27</string>
    <string name="seat_28">28</string>
    <string name="seat_29">29</string>
    <string name="seat_30">30</string>
    <string name="seat_31">31</string>
    <string name="seat_32">32</string>
    <string name="seat_33">33</string>
    <string name="seat_34">34</string>
    <string name="seat_35">35</string>
    <string name="seat_36">36</string>
    <string name="seat_37">37</string>
    <string name="seat_38">38</string>
    <string name="seat_39">39</string>
    <string name="seat_40">40</string>
    <string name="seat_41">41</string>
    <string name="seat_42">42</string>
    <string name="seat_43">43</string>
    <string name="seat_44">44</string>
    <string name="seat_45">45</string>
    <string name="seat_46">46</string>
    <string name="seat_47">47</string>
    <string name="seat_48">48</string>
    <string name="seat_49">49</string>
    <string name="seat_50">50</string>
    <string name="powered_by">powered by</string>
    <string name="pay_now">Pay Now</string>
    <string name="unpaid">Unpaid</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="service_charges">Service Charges</string>
    <string name="tax_vat"><![CDATA[Tax & VAT]]></string>
    <string name="cinc_with_dashes">* Cinc with dashes e.g (12345-1234567-8)</string>


</resources>