<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bottom_corner_rounded"
        android:orientation="vertical"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/bus_tickets"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/pwdfaisalmovers" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_headingFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="15dp"
                android:text="@string/from"
                android:textColor="@color/city_heading_color"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_selectFromCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/select_city"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_headingFrom"
                app:layout_constraintTop_toBottomOf="@+id/tv_headingFrom" />

            <View
                android:id="@+id/view"
                android:layout_width="250dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_selectFromCity"
                app:layout_constraintTop_toBottomOf="@+id/tv_selectFromCity" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_citySwitch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/_72sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_switch_city"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_headingTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/to"
                android:textColor="@color/city_heading_color"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_selectToCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/select_city"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_headingTo"
                app:layout_constraintTop_toBottomOf="@+id/tv_headingTo" />

            <View
                android:id="@+id/view_1"
                android:layout_width="250dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_selectToCity"
                app:layout_constraintTop_toBottomOf="@+id/tv_selectToCity" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_headingDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="270dp"
                android:text="@string/date"
                android:textColor="@color/city_heading_color"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintStart_toStartOf="@+id/tv_headingDate"
                app:layout_constraintTop_toBottomOf="@+id/tv_headingDate">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/today"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="09"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Dec 2020"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tomorrow"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="09"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Dec 2020"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Wednesday"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="09"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Dec 2020"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_calender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calender" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/open_calender"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_homeGo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/orange_circle"
            android:src="@drawable/ic_nextarrow" />

    </LinearLayout>
</ScrollView>