<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_route_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_1sdp"
        app:cardElevation="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:gravity="start"
                    android:text="@string/bus_type"
                    android:fontFamily="@font/myriad_pro_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="end"
                    android:fontFamily="@font/circular_std_book"
                    android:text="Seats left"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_busType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:gravity="start"
                    android:fontFamily="@font/circular_std_book"
                    android:text="Business Class"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_seatLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="36"
                    android:fontFamily="@font/circular_std_bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/ic_bus" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:weightSum="3">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/price"
                        android:fontFamily="@font/circular_std_book"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_selectedRoutePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:fontFamily="@font/circular_std_bold"
                        android:text="Rs 1600"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/departure"
                        android:fontFamily="@font/circular_std_book"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_selectedRouteDeparture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:fontFamily="@font/circular_std_bold"
                        android:text="11:20 am"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/_15ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/arrival"
                        android:fontFamily="@font/circular_std_book"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_selectedRouteArrival"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:fontFamily="@font/circular_std_bold"
                        android:text="11:20 am"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/_15ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>




        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>